Adding Functionality a Simple Colors
Creating a logic in JS for switching color  in a simple mode

--- a/style.css
+++ b/style.css
@@ -200,6 +200,6 @@ h1 {
 
   .btn-hero:hover{
     color:var(--clr-white);
-    background: var(--clr-bl);
+    background: var(--clr-black);
   } 
 
